copied "update field" action to uapages some little fixes to it truncate long articles in view mode by markup (need to do same to table in index mode!)

--- a/advanced/frontend/web/css/site.css
+++ b/advanced/frontend/web/css/site.css
@@ -149,3 +149,20 @@ body > .container {
 code {
   font-size: 80%;
 }*/
+
+/* truncate big text in div */
+.truncate-vertical {
+	max-height: 25em;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+.fadeout {
+    position: relative; 
+    margin-top: -4em;
+    height: 4em;
+    background: -webkit-linear-gradient(
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 1) 100%
+    ); 
+} 
